--- a/themes/maupassant/layout/_partial/comments.pug
+++ b/themes/maupassant/layout/_partial/comments.pug
@@ -111,8 +111,8 @@ if theme.gitalk.enable == true
 
 if theme.valine.enable == true
     #vcomment
-    script(src='//cdn1.lncld.net/static/js/3.0.4/av-min.js')
-    script(src='//unpkg.com/valine@latest/dist/Valine.min.js')
+    //- script(src='//cdn1.lncld.net/static/js/3.0.4/av-min.js')
+    script(src='//unpkg.com/valine/dist/Valine.min.js')
     script.
       var notify = '#{ theme.valine.notify }' == true ? true : false;
       var verify = '#{ theme.valine.verify }' == true ? true : false;
@@ -128,7 +128,9 @@ if theme.valine.enable == true
         appId:'#{theme.valine.appid}',
         appKey:'#{theme.valine.appkey}',
         placeholder:'#{theme.valine.placeholder}',
+        visitor:'#{theme.valine.visitor}',
         avatar:'#{theme.valine.avatar}',
         guest_info:guest_info,
+        recordIP:true,
         pageSize:'#{theme.valine.pageSize}'
       })
