--- a/themes/maupassant/layout/index.pug
+++ b/themes/maupassant/layout/index.pug
@@ -9,40 +9,79 @@ block title
 block content
   for post in page.posts.toArray()
     .post
-      h1.post-title
-        include _partial/helpers.pug
-        a(href=url_for(post.path),target='_blank')
-          +title(post)
-      .post-meta= post.date.format(config.date_format)
-      if theme.disqus
-        a.disqus-comment-count(data-disqus-identifier=post.path, href=url_for(post.path) + '#disqus_thread')
-      if theme.changyan
-        a.ds-thread-count(href=url_for(post.path) + '#SOHUCS')
-          span.cy_cmt_count(id='sourceId::' + post.date.valueOf() style='margin: 0 3px 0 1px;') 0
-          span= ' ' + __('Comment')
-      if post.description
-        .post-content
-          != post.description
-      else if post.excerpt
-        .post-content
-          != post.excerpt
-      else if post.content
-        - var br = 0
-        - for (var i = 0; i < 5; ++i) {
-          - br = post.content.indexOf('\n',br+1)
-          if br<0
-            - break
-          if br >150
-            - break
-        - }
-        if br < 0
+      if post.img
+        .gallery
+          img.post-img(src=post.img)
+          div.right
+            h1.post-title
+              include _partial/helpers.pug
+              a(href=url_for(post.path),target='_blank')
+                +title(post)
+            if post.description
+              .post-content
+                != post.description
+            else if post.excerpt
+              .post-content
+                != post.excerpt
+            else if post.content
+              - var br = 0
+              - for (var i = 0; i < 5; ++i) {
+                - br = post.content.indexOf('\n',br+1)
+                if br<0
+                  - break
+                if br >150
+                  - break
+              - }
+              if br < 0
+                .post-content
+                  != post.content
+              else
+                .post-content
+                  != post.content.substring(0, br)
+            .post-meta= post.date.format(config.date_format)
+            if theme.disqus
+              a.disqus-comment-count(data-disqus-identifier=post.path, href=url_for(post.path) + '#disqus_thread')
+            if theme.changyan
+              a.ds-thread-count(href=url_for(post.path) + '#SOHUCS')
+                span.cy_cmt_count(id='sourceId::' + post.date.valueOf() style='margin: 0 3px 0 1px;') 0
+                span= ' ' + __('Comment')
+            p(class='readmore')
+              a(href=url_for(post.path))= __('Readmore')
+      else
+        h1.post-title
+          include _partial/helpers.pug
+          a(href=url_for(post.path),target='_blank')
+            +title(post)
+        .post-meta= post.date.format(config.date_format)
+        if theme.disqus
+          a.disqus-comment-count(data-disqus-identifier=post.path, href=url_for(post.path) + '#disqus_thread')
+        if theme.changyan
+          a.ds-thread-count(href=url_for(post.path) + '#SOHUCS')
+            span.cy_cmt_count(id='sourceId::' + post.date.valueOf() style='margin: 0 3px 0 1px;') 0
+            span= ' ' + __('Comment')
+        if post.description
           .post-content
-            != post.content
-        else
+            != post.description
+        else if post.excerpt
           .post-content
-            != post.content.substring(0, br)
-      p(class='readmore')
-        a(href=url_for(post.path))= __('Readmore')
+            != post.excerpt
+        else if post.content
+          - var br = 0
+          - for (var i = 0; i < 5; ++i) {
+            - br = post.content.indexOf('\n',br+1)
+            if br<0
+              - break
+            if br >150
+              - break
+          - }
+          if br < 0
+            .post-content
+              != post.content
+          else
+            .post-content
+              != post.content.substring(0, br)
+        p(class='readmore')
+          a(href=url_for(post.path))= __('Readmore')
 
   include _partial/paginator.pug
   if theme.disqus
