--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -1606,6 +1606,25 @@ pre {
       .readmore{
         display: none;
       }
+      .gallery{
+    display: flex;
+    &>a{
+      width:100%
+      flex: 1 0 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      max-height: 200px;
+      img{
+        max-width: 100%;
+        max-height: 100%;
+      }
+    }
+    &>.right{
+      flex: 1 0 100%;
+      padding-left: 30px;
+    }
+  }
     }
   }
   // markdown style
