--- a/themes/maupassant/source/css/style.scss
+++ b/themes/maupassant/source/css/style.scss
@@ -1614,6 +1614,7 @@ pre {
       justify-content: center;
       align-items: center;
       max-height: 200px;
+      overflow:hidden;
       img{
         max-width: 100%;
         max-height: 100%;
