--- a/themes/maupassant/layout/_partial/head.pug
+++ b/themes/maupassant/layout/_partial/head.pug
@@ -41,9 +41,9 @@ head
     link(rel="dns-prefetch",href="//scarsu.disqus.com")
     link(rel="dns-prefetch",href="//disqus.com")
     link(rel='stylesheet', type='text/css', href=url_for(theme.css) + '/style.css' + '?v=' + theme.version)
-    link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/normalize/8.0.0/normalize.min.css')
-    link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/1.0.0/pure-min.css')
-    link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/1.0.0/grids-responsive-min.css')
+    //- link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/normalize/8.0.0/normalize.min.css')
+    //- link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/1.0.0/pure-min.css')
+    //- link(rel='stylesheet', type='text/css', href='//cdn.bootcss.com/pure/1.0.0/grids-responsive-min.css')
     link(rel='stylesheet', href='//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css')
     script(type='text/javascript', src='//cdn.bootcss.com/jquery/3.3.1/jquery.min.js')
     link(rel='Shortcut Icon', type='image/x-icon', href=url_for('favicon.ico'))
@@ -120,12 +120,12 @@ head
           if(window.location.host.indexOf("scarsu.cn")>=0){
             mirrorLink.innerHTML=`
               <i class="fa fa-paper-plane"></i>
-              <a href="http://www.scarsu.com" title="国外镜像站scarsu.com" target="_blank">国外镜像站scarsu.com</a>
+              <a href="http://www.scarsu.com" title="国外镜像站scarsu.com" target="_blank">国外站</a>
             `
           }else{
             mirrorLink.innerHTML=`
               <i class="fa fa-paper-plane"></i>
-              <a href="http://www.scarsu.cn" title="国内镜像站scarsu.cn" target="_blank">国内镜像站scarsu.cn</a>
+              <a href="http://www.scarsu.cn" title="国内镜像站scarsu.cn" target="_blank">国内站</a>
             `
           }
           document.querySelector('.site-name .right').insertBefore(mirrorLink,document.querySelector('#lighter-btn'))
