--- a/themes/maupassant/layout/base-without-sidebar.pug
+++ b/themes/maupassant/layout/base-without-sidebar.pug
@@ -25,14 +25,14 @@ html(lang=config.language)
         a#logo(href=url_for('.'))= config.title
         p.description= config.subtitle
       #nav-menu
+        div(style="display:none;",id="nav-menu-btn")
+          i(class='fa fa-list')
         - for (var i in theme.menu)
           +a_with_current(theme.menu[i].directory, __(theme.menu[i].page), theme.menu[i].icon)
 
-    #layout.pure-g
-      .pure-u-1.pure-u-md-4-4: .content_container
+    #layout
+      .content_container
         block content
-      .pure-u-1.pure-u-md-4-4
-        != partial('_partial/footer.pug')
+    != partial('_partial/footer.pug')
 
-    include _partial/totop.pug
     include _partial/after_footer.pug
